crates/cli/tests/snapshots/lib__check@type_param_in_variant_struct.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/type_param_in_variant_struct.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/type_param_in_variant_struct.nemo
---
success: false
exit_code: 1
----- stdout -----
[23] Error: Can't declare type parameters for structs in a variant.
   ╭─[ tests/check/type_param_in_variant_struct.nemo:2:10 ]
   │
 2 │   struct None[a] {}
   │          ──┬─  
   │            ╰─── Can't declare type parameters for structs in a variant.
───╯


----- stderr -----
Error: "Check failed with 1 errors"
